--- a/src/views/users/index.html
+++ b/src/views/users/index.html
@@ -32,3 +32,8 @@
     <h1>Esteban Alejandro Ortega Rosero</h1>
 </div>
 {% endblock %}
+{% extends 'layouts/base.html' %} {% block titulo %} Inicio {% endblock %} {% block contenido %}
+<h1>Saludos desde una templates desde flask</h1>
+
+<a href="{{ url_for('productos') }}">Productos</a>
+{% endblock %}
